Some cleaning in scss files.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,4 +1,4 @@
-@import "node_modules/nord/src/sass/nord.scss";
+// @import "node_modules/nord/src/sass/nord.scss";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 $color-bg: white;
 $color-bg-alt: black;
@@ -26,68 +26,73 @@ body {
   margin: 0;
 }
 
-nav {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: flex-end;
-  align-items: center;
-  width: 100vw;
-  height: auto;
+header {
   background-color: $color-bg-alt;
-  font-size: 2.5rem;
-  padding: 1rem;
+  display: flex;
+  align-items: center;
+
   .title_container {
+    // border: 1px yellow solid;
     margin-right: auto;
+    margin-left: 1rem;
+
     a {
       display: block;
       text-decoration: none;
       color: $color-text-alt;
+      font-size: 3rem;
       text-align: center;
+    }
+  }
+
+  nav {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    font-size: 2.5rem;
+    padding: 1rem;
+
+    .inside_links {
+      list-style-type: none;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-end;
+      align-items: center;
+      // margin-right: 1rem;
+
+      li {
+        a {
+          color: $color-text-alt;
+          text-decoration: none;
+          padding: 1rem 1rem;
+          display: block;
+          background-color: $color-bg-alt;
+        }
+        a:hover {
+          color: $color-text-alt;
+        }
+      }
+    }
+    .outside_links {
+      list-style-type: none;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-end;
       margin-left: 1rem;
-    }
-  }
-  .inside_links {
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-right: 2rem;
-    padding: 0;
-    li {
-      height: 100%;
-      a {
-        display: block;
-        color: $color-text-alt;
-        text-align: center;
-        text-decoration: none;
-        padding: 1rem 1rem;
-        background-color: $color-bg-alt;
-      }
-      a:hover {
-        color: $color-text-alt;
-      }
-    }
-  }
-  .outside_links {
-    list-style-type: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    padding: 0;
-    li {
-      height: 100%;
-      a {
-        display: block;
-        color: $color-text-alt;
-        text-align: center;
-        text-decoration: none;
-        padding: 1rem 1rem;
-        background-color: $color-bg-alt;
-      }
-      a:hover {
-        color: $color-text-alt;
+      padding: 0;
+      li {
+        a {
+          display: block;
+          color: $color-text-alt;
+          text-decoration: none;
+          padding: 1rem 1rem;
+          background-color: $color-bg-alt;
+        }
+        a:hover {
+          color: $color-text-alt;
+        }
       }
     }
   }
