--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -1,6 +1,8 @@
 @use '../abstracts/colors' as c;
 
 header {
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
+    sans-serif, Apple Color Emoji, Segoe UI Emoji;
   display: flex;
   align-items: center;
   padding: 1rem;
